--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Topos BBVA" />
+    <meta name="theme-color" content="#1212BA">
+    <meta name="description" content="Topos BBVA"/>
     <meta name="author" content="Joel Campos" />
     <title>Topos BBVA</title>
   </head>
