feat: add OG tag

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <meta name="description" content="Topos BBVA"/>
     <meta name="author" content="Joel Campos" />
     <title>Topos BBVA</title>
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Topos BBVA" />
+    <meta property="og:description" content="Juego de topos" />
+    <meta property="og:image" content="%VITE_PUBLIC_BASE_URL%/icons/pwa-192x192.png" />
+    <meta property="og:url" content="%VITE_PUBLIC_BASE_URL%/" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="root"></div>
